css/style.css
/* ... */
.page-header__profile-link,
.page-header__options-link {
    position: relative;
    padding-left: 21px;
    line-height: 36px;
    color: #000;
    text-decoration: none;
    letter-spacing: .012em;
}

.page-header__profile-link {
    padding-left: 21px;
}

.page-header__options-item {
    margin-left: 39px;
}

.page-header__profile-link:hover,
.page-header__options-link:hover,
.page-header__profile-link:focus,
.page-header__options-link:focus {
    opacity: 0.6;
}

.page-header__profile-link:active,
.page-header__options-link:active {
    opacity: 0.3;
}

.page-header__profile-link_sign-in::before {
    position: absolute;
    top: 50%;
    left: -2px;

    content: "";

    width: 14px;
    height: 13px;

    background-image: url("../img/user.svg");
    background-repeat: no-repeat;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

.page-header__profile-link_log-out {
    color: gray;
}

.page-header__options-link_compare::before {
    position: absolute;
    top: 50%;
    left: 0;

    width: 14px;
    height: 13px;

    background-image: url("../img/compare.svg");
    background-repeat: no-repeat;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);

    content: "";
}

.page-header__options-link_cart::before {
    position: absolute;
    top: 50%;
    left: 0;

    width: 14px;
    height: 13px;

    background-image: url("../img/cart.svg");
    background-repeat: no-repeat;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);

    content: "";
}

/* Header - options */
.page-header__options {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: distribute;
    justify-content: space-around;

    width: 220px;

    list-style: none;
    margin: 0;
    margin-left: 29px;
    padding: 0;
}

/* Header - lower level (navigation) */
.page-header__nav {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;

    margin: 0;
    padding: 0;
}

/* Header - Каталог товаров, доставка, гарантия, контакты */
.page-header__nav-list {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;

    list-style: none;
    margin: 0;
    padding: 0;
}

.page-header__nav-item {
    width: 175px;
}

.page-header__nav-item:first-of-type {
    position: relative;
    width: 273px;
    margin-right: 268px;
}

.page-header__nav-item:first-of-type .page-header__nav-link::after {
    position: absolute;
    top: 5px;
    left: 230px;
    width: 40px;
    height: 40px;

    content: "";
    background: url("../img/plus.svg") no-repeat;
}

.page-header__nav-item:nth-of-type(2) {
    width: 157px;
}

.page-header__nav-item:nth-of-type(3) {
    margin-right: 47px;
}

.page-header__nav-item:nth-of-type(4) {
    width: 120px;
}

/* Header - catalog (show menu functionality) */

/* Header - Подменю в разделе "Каталог товаров" */
.page-header__nav-goods {
    display: none;
    position: absolute;
    z-index: 2;
    left: 0;

    -ms-flex-wrap: wrap;

    flex-wrap: wrap;
    -ms-flex-line-pack: start;
    align-content: flex-start;

    width: 600px;
    margin: 0;
    padding: 0;
    padding-top: 40px;

    list-style: none;

    background: #f7e296;
}

.page-header__nav-goods::before {
    position: absolute;
    top: -7px;
    left: -60px;

    width: 1160px;
    min-height: 168px;

    background: #f7e296;

    content: "";
}

.page-header__nav-goods-item {
    z-index: 3;

    width: 200px;
}

.page-header__nav-goods-item:last-child {
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
}

.page-header__nav-item:first-of-type .page-header__nav-link:hover + .page-header__nav-goods,
.page-header__nav-goods:hover {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.page-header__nav-goods-link {
    font-size: 15px;
    font-weight: 300;
    line-height: 36px;
    letter-spacing: 0.15px;
    text-transform: none;
    word-break: break-all;
}

.page-header__nav-goods-link:hover {
    color: rgba(0, 0, 0, .6);
}

/***

Global site Footer block

***/

.page-footer {
    margin-top: 77px;
    padding-top: 13px;
    min-height: 323px;
    background: #464646;
}

.page-footer_catalog {
    margin-top: 0;
    padding-top: 17px;
}

.page-footer .page-footer__menu-link {
    font-family: "Gilroy ExtraBold", "Arial", sans-serif;
    font-size: 18px;
    line-height: 22px;
    color: #fff;
    text-transform: uppercase;
    letter-spacing: .2em;
}

.page-footer__actions-link {
    color: rgba(255, 255, 255, 0.7);
    text-decoration: none;
}

.page-footer__actions-link:hover,
.page-footer__actions-link:active {
    color: #ffffff;
}

.page-footer__actions-link svg {
    margin-right: 8px;
}

.page-footer__actions-link svg:hover {
    opacity: 0.6;
}

.page-footer__actions-link path {
    fill: rgba(255, 198, 0, 1);
}

.page-footer__actions-link:hover,
.page-footer__actions-link:focus {
    color: rgba(255, 255, 255, 1);
}

.page-footer__actions-link:hover path,
.page-footer__actions-link:focus path {
    fill: rgba(255, 198, 0, 0.6);
}

.page-footer__actions-link:active {
    color: rgba(255, 255, 255, 0.3);
}

.page-footer__actions-link:active path {
    fill: rgba(255, 198, 0, 0.3);
}

.page-footer .container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.page-footer__info,
.page-footer__menu,
.page-footer__actions {
    margin-top: 50px;
}

.page-footer__actions {
    margin-left: 25px;
}

.page-footer__info {
    position: relative;

    width: 280px;
    margin-top: 54px;
}

.page-footer__info::after {
    position: absolute;
    bottom: 21px;

    width: 80px;
    height: 8px;

    background: #ffc600;
    content: "";
}
/* ... */

